--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <title>Odin Rock Paper Scissors</title>
+        <script src="script.js" defer></script>
     </head>
     <body>
-        <script src="script.js"></script>
+        <h1>Rock Paper Scissors</h1>
+        <h2>Round <span class="round">1</span></h2>
+        <div class="playerChoices">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <span class="score-container">
+            Player:
+            <p class="player-score">0</p>
+            Computer:
+            <p class="computer-score">0</p>
+        </span>
+        <div class="display">
+            <h2>Your Choice</h2>
+            <p class="player-choice"></p>
+            <h2>Computer's Choice</h2>
+            <p class="computer-choice"></p>
+            <p class="game-result"></p>
+        </div>
     </body>
 </html>
