Add images to display

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
             <p class="computer-score">0</p>
         </span>
         <div class="display">
-            <div>
+            <div class="player-choice">
                 <h2>Your Choice</h2>
-                <p class="player-choice"></p>
+                <img src="" alt="" class="player-image">
+                <p class="player-choice-text"></p>
             </div>
-            <div>
+            <div class="computer-choice">
                 <h2>Computer's Choice</h2>
-                <p class="computer-choice"></p>
+                <img src="" alt="" class="computer-image">
+
+                <p class="computer-choice-text"></p>
             </div>
         </div>
         <p class="game-result"></p>
