Add placeholder image for blank stae

--- a/index.html
+++ b/index.html
@@ -27,17 +27,21 @@
         <div class="display">
             <div class="player-choice">
                 <h2>Your Choice</h2>
-                <img src="" alt="" class="player-image">
+                <div class="img-div">
+                    <img src="waiting.png" alt="" class="player-image">
+                </div>
                 <p class="player-choice-text"></p>
             </div>
             <div class="computer-choice">
                 <h2>Computer's Choice</h2>
-                <img src="" alt="" class="computer-image">
+                <div class="img-div">
+                    <img src="waiting.png" alt="" class="computer-image">
+                </div>
 
                 <p class="computer-choice-text"></p>
             </div>
         </div>
-        <p class="game-result"></p>
+        <p class="game-result">Choose a move!</p>
         </div>
         
     </body>
